--- a/serverClientA/src/main/resources/templates/index.html
+++ b/serverClientA/src/main/resources/templates/index.html
@@ -5,27 +5,8 @@
     <title>生成发送报文</title>
 </head>
 
-<SCRIPT language="JavaScript">
-
-    function ok() {
-        var date = new Date();
-        var day = date.getDate();
-        var month = date.getMonth() + 1;
-        var year = date.getFullYear();
-
-        var nsrsbh = document.generation.nsrsbh.value;
-        var fpdm = document.generation.fpdm.value;
-        var fpzl = document.generation.fpzl.value;
-        var fpzt = document.generation.fpzt.value;
-        var time = year + "/" + month + "/" + day;//获取当前时间
-        // var xml = "<INPUT>" + "<FPZL>" + fpzl + "</FPZL>" + "<FPDM>" + fpdm + "</FPDM>" + "<FPZT>" + fpzt + "</FPZT>" + "<NSRSBH>" + nsrsbh + "</NSRSBH>" + "<DATE>" + date + "</DATE>" + "</INPUT>";
-
-        document.generation.onsubmit();
-    }
-</SCRIPT>
-
 <body>
-<form action="#" th:action="@{/generateXML}" th:object="${fpInfo}" method="post">
+<form action="#" name="generation" th:action="@{/generateXML}" th:object="${fpInfo}" method="post">
 
     <table>
         <tr>
@@ -65,15 +46,12 @@
             <td>
                 <label>
                     <p th:text="*{date}"></p>
-                    <!--<input type="text" th:field="*{date}">-->
                 </label>
             </td>
         </tr>
 
-
     </table>
-    <input type="submit"/>
-    <!--<input type="button" name="Button" value="生成报文" onclick="ok()">-->
+    <input type="submit" value="生成报文"/>
 </form>
 </body>
 </html>
